<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.androidl.itsecurityquizapp.MainActivity">

        <!--Name Input-->
        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:inputType="textCapWords" />

        <!--Question 1-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/num_question_1" />

        <TextView
            style="@style/QuestionText"
            android:text="@string/question_1" />

        <CheckBox
            style="@style/Checkbox_Answer"
            android:text="@string/redundancy" />

        <CheckBox
            style="@style/Checkbox_Answer"
            android:text="@string/availability" />

        <CheckBox
            style="@style/Checkbox_Answer"
            android:text="@string/integrity" />

        <CheckBox
            style="@style/Checkbox_Answer"
            android:text="@string/confidentiality" />

        <CheckBox
            style="@style/Checkbox_Answer"
            android:text="@string/remote_access" />

        <!--Line-->
        <View style="@style/Line"></View>

        <!--Question 2-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="Question 2" />

    </LinearLayout>

</ScrollView>

